--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 # Add regular dependencies here.
 dependencies:
   string_validator: ^1.1.0
+  benchmark_harness: ^2.3.1
+  benchmarking: ^0.6.1
   # path: ^1.8.0
 
 dev_dependencies:
