--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,14 @@ description: Vine is a robust, typed validation library for Dart/Flutter, design
 version: 1.0.0
 repository: https://github.com/LeadcodeDev/vine
 
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
+
 environment:
   sdk: ^3.5.3
 
