--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,13 +3,12 @@ name: Publish to pub.dev
 on:
   push:
     tags:
-    - 'v[0-9]+.[0-9]+.[0-9]+*' # tag pattern on pub.dev: 'v'
+    - 'v[0-9]+.[0-9]+.[0-9]+*'
 
-# Publish using custom workflow
 jobs:
   publish:
     permissions:
-      id-token: write # This is required for authentication using OIDC
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: dart pub get
       - name: Format
-        run: dart format
+        run: dart format .
       - name: Test
         run: dart test
       - name: Publish
